<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E9EEF8"
    android:padding="20dp"
    android:id="@+id/login"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"

            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/healthline_logo"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HealthLine"
                android:textColor="#2563EB"
                android:textStyle="bold"
                android:textSize="38sp"

                />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Login to your account"
            android:textColor="#4B5563"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Email Address"
            android:textStyle="bold"
            android:textColor="#374151"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_input_field"
            >

            <ImageView
                android:id="@+id/iconEmail"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/email_icon"
                android:layout_marginStart="14dp"
                android:layout_gravity="center"
                />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="Enter your email"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:textColor="#111827"

            />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Password"
            android:textStyle="bold"
            android:textColor="#374151"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_input_field"
            >

            <ImageView
                android:id="@+id/iconPass"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lock_icon"
                android:layout_marginStart="14dp"
                android:layout_gravity="center"
                />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@null"
            android:hint="Enter your password"
            android:padding="16dp"
            android:inputType="textPassword"
            android:textColor="#111827"
            />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:textStyle="bold"
                android:textColor="#4B5563"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot password?"
                android:paddingStart="10dp"
                android:textColor="#2563EB"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#2C4EB3"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account? "
                android:textColor="#4B5563"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Sign up"
                android:textColor="#2563EB"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</ScrollView>